--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+
     <!-- Navigation Area -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-start  ">
@@ -52,11 +53,80 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
         </nav>
 
     </header>
+
+    <main>
+
+        <!-- carousel area -->
+
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./images/banner.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>The perfect venue for your
+                            next event</h1>
+                        <p> Introducing the largest event space for the first time in Bangladesh.</p>
+                        <button class="btn btn-primary ps-3 pe-3">Book
+                            Now <a href="https://www.google.com/"></a>
+                        </button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/people.png" class="d-block w-100 height" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>The perfect venue for your
+                            next event</h1>
+                        <p> Introducing the largest event space for the first time in Bangladesh.</p>
+                        <button class="btn btn-primary ps-3 pe-3">Book
+                            Now <a href="https://www.google.com/"></a>
+                        </button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/wedding.png" class="d-block w-100 height" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>The perfect venue for your
+                            next event</h1>
+                        <p> Introducing the largest event space for the first time in Bangladesh.</p>
+                        <button class="btn btn-primary ps-3 pe-3">Book
+                            Now <a href="https://www.google.com/"></a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+
+
+
+
+    </main>
+
+
 
 
 
