--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./images/banner.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1>The perfect venue for your
+                    <div class="carousel-caption d-none d-md-block my-5">
+                        <h1 class="fw-bold">The perfect venue for your
                             next event</h1>
                         <p> Introducing the largest event space for the first time in Bangladesh.</p>
                         <button class="btn btn-primary ps-3 pe-3">Book
@@ -85,9 +85,9 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/people.png" class="d-block w-100 height" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1>The perfect venue for your
+                    <img src="./images/party-2.jpg" class="d-block w-100 height" alt="...">
+                    <div class="carousel-caption d-none d-md-block my-5">
+                        <h1 class="fw-bold">The perfect venue for your
                             next event</h1>
                         <p> Introducing the largest event space for the first time in Bangladesh.</p>
                         <button class="btn btn-primary ps-3 pe-3">Book
@@ -96,9 +96,9 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/wedding.png" class="d-block w-100 height" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1>The perfect venue for your
+                    <img src="./images/party.jpg" class="d-block w-100 height " alt="...">
+                    <div class="carousel-caption d-none d-md-block my-5">
+                        <h1 class="fw-bold ">The perfect venue for your
                             next event</h1>
                         <p> Introducing the largest event space for the first time in Bangladesh.</p>
                         <button class="btn btn-primary ps-3 pe-3">Book
