--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <!-- Navigation Area -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-start  ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-                <a class="navbar-brand sm-fs-4 lg-fw-bold" href="#">Glamorous Convention Center</a>
+                <a class="navbar-brand lg-fw-bold" href="#">Glamorous Convention Center</a>
                 <div class="">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,16 +38,16 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item ms-2 me-3 me-2">
+                            <li class="nav-item mx-2">
                                 <a class="nav-link" aria-current="page" href="#">Home</a>
                             </li>
-                            <li class="nav-item ms-2 me-3 me-2">
+                            <li class="nav-item mx-2">
                                 <a class="nav-link" href="#">About Us</a>
                             </li>
-                            <li class="nav-item ms-2 me-3 me-2">
+                            <li class="nav-item mx-2">
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
-                            <li class="nav-item ms-2 me-3 me-2">
+                            <li class="nav-item mx-2">
                                 <a class="nav-link" href="#">Subscribe</a>
                             </li>
                         </ul>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/party-2.jpg" class="d-block w-100 height" alt="...">
+                    <img src="./images/party-2.jpg" class="d-block w-100 " alt="...">
                     <div class="carousel-caption d-none d-md-block my-5">
                         <h1 class="fw-bold">The perfect venue for your
                             next event</h1>
@@ -96,9 +96,9 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/party.jpg" class="d-block w-100 height " alt="...">
+                    <img src="./images/party.jpg" class="d-block w-100  " alt="...">
                     <div class="carousel-caption d-none d-md-block my-5">
-                        <h1 class="fw-bold ">The perfect venue for your
+                        <h1 class="lg-fw-bold sm-fw-normal ">The perfect venue for your
                             next event</h1>
                         <p> Introducing the largest event space for the first time in Bangladesh.</p>
                         <button class="btn btn-primary ps-3 pe-3">Book
