--- a/index.html
+++ b/index.html
@@ -59,64 +59,128 @@
     </header>
 
     <main>
-
-        <!-- carousel area -->
-
-
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+        <!-- Carousel Area -->
+        <section>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/banner.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block my-5">
+                            <h1 class="fw-bold">The perfect venue for your
+                                next event</h1>
+                            <p> Introducing the largest event space for the first time in Bangladesh.</p>
+                            <button class="btn btn-primary ps-3 pe-3">Book
+                                Now <a href="https://www.google.com/"></a>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/party-2.jpg" class="d-block w-100 " alt="...">
+                        <div class="carousel-caption d-none d-md-block my-5">
+                            <h1 class="fw-bold">The perfect venue for your
+                                next event</h1>
+                            <p> Introducing the largest event space for the first time in Bangladesh.</p>
+                            <button class="btn btn-primary ps-3 pe-3">Book
+                                Now <a href="https://www.google.com/"></a>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/party.jpg" class="d-block w-100  " alt="...">
+                        <div class="carousel-caption d-none d-md-block my-5">
+                            <h1 class="lg-fw-bold sm-fw-normal ">The perfect venue for your
+                                next event</h1>
+                            <p> Introducing the largest event space for the first time in Bangladesh.</p>
+                            <button class="btn btn-primary ps-3 pe-3">Book
+                                Now <a href="https://www.google.com/"></a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images/banner.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block my-5">
-                        <h1 class="fw-bold">The perfect venue for your
-                            next event</h1>
-                        <p> Introducing the largest event space for the first time in Bangladesh.</p>
-                        <button class="btn btn-primary ps-3 pe-3">Book
-                            Now <a href="https://www.google.com/"></a>
-                        </button>
+        </section>
+
+        <!-- BONUS -->
+        <!-- Our Package Area -->
+        <div class="container ">
+
+            <section class="py-5 ">
+                <h1 class="text-center pb-5">
+                    Our package
+                </h1>
+                <div class="row ">
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="card  border border-white">
+                            <div class="card-body  ">
+                                <h4 class="fw-bold">$300</h4>
+                                <h5 class="card-title fw-bold">Business fair</h5>
+                                <p class="card-text">For most businesses event
+                                    like book fair, craft fair.</p>
+                                <div class="d-flex justify-content-center">
+                                    <a href="#" class="btn btn-primary ">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6  col-lg-3">
+                        <div class="card border border-white">
+                            <div class="card-body">
+                                <h4 class="fw-bold">$500</h4>
+                                <h5 class="card-title fw-bold">Wedding basic</h5>
+                                <p class="card-text">For weddings with basic plan
+                                    and limited item</p>
+                                <div class="d-flex justify-content-center">
+                                    <a href="#" class="btn btn-primary ">Go somewhere</a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6  col-lg-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4 class="fw-bold">$800</h4>
+                                <h5 class="card-title fw-bold">Wedding plus</h5>
+                                <p class="card-text">For most weddings with premium plans</p>
+                                <div class="d-flex justify-content-center">
+                                    <a href="#" class="btn btn-primary ">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6  col-lg-3">
+                        <div class="card border border-white">
+                            <div class="card-body">
+                                <h4 class="fw-bold">$1200</h4>
+                                <h5 class="card-title fw-bold">Corporate event</h5>
+                                <p class="card-text">For most corporate business
+                                    events</p>
+                                <div class="d-flex justify-content-center">
+                                    <a href="#" class="btn btn-primary ">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="./images/party-2.jpg" class="d-block w-100 " alt="...">
-                    <div class="carousel-caption d-none d-md-block my-5">
-                        <h1 class="fw-bold">The perfect venue for your
-                            next event</h1>
-                        <p> Introducing the largest event space for the first time in Bangladesh.</p>
-                        <button class="btn btn-primary ps-3 pe-3">Book
-                            Now <a href="https://www.google.com/"></a>
-                        </button>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./images/party.jpg" class="d-block w-100  " alt="...">
-                    <div class="carousel-caption d-none d-md-block my-5">
-                        <h1 class="lg-fw-bold sm-fw-normal ">The perfect venue for your
-                            next event</h1>
-                        <p> Introducing the largest event space for the first time in Bangladesh.</p>
-                        <button class="btn btn-primary ps-3 pe-3">Book
-                            Now <a href="https://www.google.com/"></a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            </section>
         </div>
 
 
