cart button done

--- a/index.html
+++ b/index.html
@@ -123,19 +123,51 @@
         <div class="container ">
 
             <section class="py-5 ">
-                <h1 class="text-center pb-5">
+                <h1 class="text-center fw-bold pb-5">
                     Our package
                 </h1>
                 <div class="row ">
                     <div class="col-sm-6 col-lg-3">
                         <div class="card  border border-white">
                             <div class="card-body  ">
-                                <h4 class="fw-bold">$300</h4>
-                                <h5 class="card-title fw-bold">Business fair</h5>
+                                <h4 class="fw-bold pb-3 pt-5">$300</h4>
+                                <h5 class="card-title py-2 fw-bold">Business fair</h5>
                                 <p class="card-text">For most businesses event
                                     like book fair, craft fair.</p>
+                                <ul class="features px-0">
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>limited space access</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg> Secuirty facility</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>event support</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Decoration design</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Per day bill</li>
+                                </ul>
                                 <div class="d-flex justify-content-center">
-                                    <a href="#" class="btn btn-primary ">Go somewhere</a>
+                                    <a href="#" class="normal-button">Choose plan</a>
                                 </div>
                             </div>
                         </div>
@@ -143,25 +175,84 @@
                     <div class="col-sm-6  col-lg-3">
                         <div class="card border border-white">
                             <div class="card-body">
-                                <h4 class="fw-bold">$500</h4>
-                                <h5 class="card-title fw-bold">Wedding basic</h5>
+                                <h4 class="fw-bold pb-3 pt-5">$500</h4>
+                                <h5 class="card-title py-2 fw-bold">Wedding basic</h5>
                                 <p class="card-text">For weddings with basic plan
                                     and limited item</p>
+                                <ul class="features px-0">
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Full space access</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Food arrangement</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>mangement support</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Decoration design</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Billed as shift</li>
+                                </ul>
                                 <div class="d-flex justify-content-center">
-                                    <a href="#" class="btn btn-primary ">Go somewhere</a>
+                                    <a href="#" class="normal-button">Choose plan</a>
                                 </div>
 
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6  col-lg-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <h4 class="fw-bold">$800</h4>
-                                <h5 class="card-title fw-bold">Wedding plus</h5>
+                        <div class="card border border-white">
+                            <div class="card-body special-background">
+                                <h4 class="fw-bold py-3">$800</h4>
+                                <h5 class="card-title fw-bold py-2">Wedding plus</h5>
                                 <p class="card-text">For most weddings with premium plans</p>
+                                <ul class="features px-0">
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24" stroke="#FFFFFF">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Full space access</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24" stroke="#FFFFFF">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Dedicated team</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24" stroke="#FFFFFF">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Buffet food</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24" stroke="#FFFFFF">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>premium Decoration</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24" stroke="#FFFFFF">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>pay as plan</li>
+                                </ul>
                                 <div class="d-flex justify-content-center">
-                                    <a href="#" class="btn btn-primary ">Go somewhere</a>
+                                    <a href="#" class="special-button">Choose plan</a>
                                 </div>
                             </div>
                         </div>
@@ -169,12 +260,44 @@
                     <div class="col-sm-6  col-lg-3">
                         <div class="card border border-white">
                             <div class="card-body">
-                                <h4 class="fw-bold">$1200</h4>
-                                <h5 class="card-title fw-bold">Corporate event</h5>
+                                <h4 class="fw-bold pb-3 pt-5">$1200</h4>
+                                <h5 class="card-title py-2 fw-bold">Corporate event</h5>
                                 <p class="card-text">For most corporate business
                                     events</p>
+                                <ul class="features px-0">
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Full space access</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Dedicated team</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>Buffet food</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>premium Decoration</li>
+                                    <li class="features-data"><svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon h-6 w-6" fill="#5243c21b" viewBox="0 0 24 24"
+                                            stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>pay as plan</li>
+                                </ul>
                                 <div class="d-flex justify-content-center">
-                                    <a href="#" class="btn btn-primary ">Go somewhere</a>
+                                    <a href="#" class="normal-button">Choose plan</a>
                                 </div>
                             </div>
                         </div>
