card dobe except special background

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="row ">
                     <div class="col-sm-6 col-lg-3">
                         <div class="card  border border-white">
-                            <div class="card-body  ">
+                            <div class="card-body px-2 ">
                                 <h4 class="fw-bold pb-3 pt-5">$300</h4>
                                 <h5 class="card-title py-2 fw-bold">Business fair</h5>
                                 <p class="card-text">For most businesses event
@@ -174,7 +174,7 @@
                     </div>
                     <div class="col-sm-6  col-lg-3">
                         <div class="card border border-white">
-                            <div class="card-body">
+                            <div class="card-body px-2">
                                 <h4 class="fw-bold pb-3 pt-5">$500</h4>
                                 <h5 class="card-title py-2 fw-bold">Wedding basic</h5>
                                 <p class="card-text">For weddings with basic plan
@@ -219,9 +219,11 @@
                         </div>
                     </div>
                     <div class="col-sm-6  col-lg-3">
+
                         <div class="card border border-white">
-                            <div class="card-body special-background">
-                                <h4 class="fw-bold py-3">$800</h4>
+                            <div class="card-body special-background px-2">
+                                <h4 class="fw-bold py-2">$800 <span class="badge bg-danger badge-position">HOT</span>
+                                </h4>
                                 <h5 class="card-title fw-bold py-2">Wedding plus</h5>
                                 <p class="card-text">For most weddings with premium plans</p>
                                 <ul class="features px-0">
@@ -259,7 +261,7 @@
                     </div>
                     <div class="col-sm-6  col-lg-3">
                         <div class="card border border-white">
-                            <div class="card-body">
+                            <div class="card-body px-2">
                                 <h4 class="fw-bold pb-3 pt-5">$1200</h4>
                                 <h5 class="card-title py-2 fw-bold">Corporate event</h5>
                                 <p class="card-text">For most corporate business
@@ -296,7 +298,7 @@
                                                 d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                                         </svg>pay as plan</li>
                                 </ul>
-                                <div class="d-flex justify-content-center">
+                                <div class="d-flex justify-content-center pt-2">
                                     <a href="#" class="normal-button">Choose plan</a>
                                 </div>
                             </div>
