--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
                             <h1 class="fw-bold">The perfect venue for your
                                 next event</h1>
                             <p> Introducing the largest event space for the first time in Bangladesh.</p>
-                            <button class="btn btn-primary ps-3 pe-3">Book
-                                Now <a href="https://www.google.com/"></a>
-                            </button>
+                            <div class="d-flex justify-content-center">
+                                <a href="https://www.google.com/" target="_blank" class="special-button">Choose
+                                    plan</a>
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -88,9 +89,10 @@
                             <h1 class="fw-bold">The perfect venue for your
                                 next event</h1>
                             <p> Introducing the largest event space for the first time in Bangladesh.</p>
-                            <button class="btn btn-primary ps-3 pe-3">Book
-                                Now <a href="https://www.google.com/"></a>
-                            </button>
+                            <div class="d-flex justify-content-center">
+                                <a href="https://www.google.com/" target="_blank" class="special-button">Choose
+                                    plan</a>
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -99,9 +101,10 @@
                             <h1 class="lg-fw-bold sm-fw-normal ">The perfect venue for your
                                 next event</h1>
                             <p> Introducing the largest event space for the first time in Bangladesh.</p>
-                            <button class="btn btn-primary ps-3 pe-3">Book
-                                Now <a href="https://www.google.com/"></a>
-                            </button>
+                            <div class="d-flex justify-content-center">
+                                <a href="https://www.google.com/" target="_blank" class="special-button">Choose
+                                    plan</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -167,7 +170,8 @@
                                         </svg>Per day bill</li>
                                 </ul>
                                 <div class="d-flex justify-content-center">
-                                    <a href="#" class="normal-button">Choose plan</a>
+                                    <a href="https://www.google.com/" target="_blank" class="normal-button">Choose
+                                        plan</a>
                                 </div>
                             </div>
                         </div>
@@ -212,7 +216,8 @@
                                         </svg>Billed as shift</li>
                                 </ul>
                                 <div class="d-flex justify-content-center">
-                                    <a href="#" class="normal-button">Choose plan</a>
+                                    <a href="https://www.google.com/" target="_blank" class="normal-button">Choose
+                                        plan</a>
                                 </div>
 
                             </div>
@@ -254,7 +259,8 @@
                                         </svg>pay as plan</li>
                                 </ul>
                                 <div class="d-flex justify-content-center">
-                                    <a href="#" class="special-button">Choose plan</a>
+                                    <a href="https://www.google.com/" target="_blank" class="special-button">Choose
+                                        plan</a>
                                 </div>
                             </div>
                         </div>
@@ -299,7 +305,8 @@
                                         </svg>pay as plan</li>
                                 </ul>
                                 <div class="d-flex justify-content-center pt-2">
-                                    <a href="#" class="normal-button">Choose plan</a>
+                                    <a href="https://www.google.com/" target="_blank" class="normal-button">Choose
+                                        plan</a>
                                 </div>
                             </div>
                         </div>
