--- a/index.html
+++ b/index.html
@@ -325,19 +325,16 @@
                                 <h2 class="accordion-header" id="headingOne">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        Accordion Item #1
+                                        What’s the difference between event design and event planning?
                                     </button>
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse show"
                                     aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <strong>This is the first item's accordion body.</strong> It is shown by
-                                        default, until the collapse plugin adds the appropriate classes that we use to
-                                        style each element. These classes control the overall appearance, as well as the
-                                        showing and hiding via CSS transitions. You can modify any of this with custom
-                                        CSS or overriding our default variables. It's also worth noting that just about
-                                        any HTML can go within the <code>.accordion-body</code>, though the transition
-                                        does limit overflow.
+                                        <strong>Event design encompasses the more creative side of event management.
+                                            While a planner focuses on organization, we focus on the decor of the
+                                            event.</strong> From draping to lighting,furniture, and centerpieces, it is
+                                        our job to ensure your event is truly stunning.
                                     </div>
                                 </div>
                             </div>
@@ -345,19 +342,20 @@
                                 <h2 class="accordion-header" id="headingTwo">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        Accordion Item #2
+                                        How early do we need to start planning an event?
                                     </button>
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <strong>This is the second item's accordion body.</strong> It is hidden by
-                                        default, until the collapse plugin adds the appropriate classes that we use to
-                                        style each element. These classes control the overall appearance, as well as the
-                                        showing and hiding via CSS transitions. You can modify any of this with custom
-                                        CSS or overriding our default variables. It's also worth noting that just about
-                                        any HTML can go within the <code>.accordion-body</code>, though the transition
-                                        does limit overflow.
+                                        This is the second item's accordion body.Planning an event can take from weeks
+                                        to months, it really depends on the size and thedetails that the event involves.
+                                        Having enough time allows you to comfortably cover different areas and prepare
+                                        yourself for potential scenarios that might happen so you can consider various
+                                        options prior the date. You always need more time than you
+                                        think!<strong>However,when organising for a public event aiming at 100 to 1,000
+                                            attendees; the details should be released to the public and the media 2
+                                            months in advance.</strong>
                                     </div>
                                 </div>
                             </div>
@@ -366,19 +364,16 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseThree" aria-expanded="false"
                                         aria-controls="collapseThree">
-                                        Accordion Item #3
+                                        What is your refund and cancellation policy?
                                     </button>
                                 </h2>
                                 <div id="collapseThree" class="accordion-collapse collapse"
                                     aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <strong>This is the third item's accordion body.</strong> It is hidden by
-                                        default, until the collapse plugin adds the appropriate classes that we use to
-                                        style each element. These classes control the overall appearance, as well as the
-                                        showing and hiding via CSS transitions. You can modify any of this with custom
-                                        CSS or overriding our default variables. It's also worth noting that just about
-                                        any HTML can go within the <code>.accordion-body</code>, though the transition
-                                        does limit overflow.
+                                        <strong>Cancellations made 7 days or more in advance of the event date, will
+                                            receive a 100% refund.</strong> Cancellations made within 3 - 6 days will
+                                        incur a 20% fee. Cancellations made within 48 hours to the event will incur a
+                                        30% fee.
                                     </div>
                                 </div>
                             </div>
@@ -418,6 +413,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <!-- Fontawesome script Intregration -->
     <script src="https://kit.fontawesome.com/442a8da85d.js" crossorigin="anonymous"></script>
 </body>
 
