query form added

--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
         </section>
 
         <!-- BONUS -->
+
+
         <!-- Our Package Area -->
         <div class="container ">
 
@@ -394,11 +396,59 @@
 
 
         </section>
+        <!-- More query -->
+        <section class="mt-5 pb-5 bottom-bg">
+            <h1 class="text-center fw-bold pb-5 pt-5">More Questions?</h1>
+            <h5 class="text-center fw-bold"> Let us get in touch</h5>
+            <div class="row">
+                <div class="col-md-8">
+                    <img class="img-fluid" src="./images/f012e388a7a74441228bb106de1c471d.gif" alt="">
+                </div>
+                <div class="col-md-4 ">
+                    <div class="form-section container">
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Your Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="name@example.com">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Share Your Queries</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <button class="special-button">Submit</button>
+                    </div>
+                </div>
+
+            </div>
 
 
+        </section>
+
+        <!-- Footer Section  -->
+        <footer class="bg-dark  p-5">
+            <div class="row align-items-center justify-content-around">
+                <div class="col-md-9 col-sm-12">
+
+                    <p class="text-white">&#169 2022.All rights reserved</p>
+
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <div class="d-flex justify-content-end flex-column">
+                        <h5 class="text-white">Get the App</h5>
+                        <a href="https://apps.apple.com/us/app/programming-hero-coding-fun/id1478201849"
+                            target="_blank"><img class="footer-image img-fluid"
+                                src="./images/app-store-png-logo-33116.png" alt=""></a>
 
 
+                        <a href="https://play.google.com/store/apps/details?id=com.learnprogramming.codecamp"
+                            target="_blank"><img class="footer-image img-fluid" src="./images/google-play-badge.png"
+                                alt=""></a>
 
+                    </div>
+                </div>
+            </div>
+
+        </footer>
 
     </main>
 
