--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-                <a class="navbar-brand lg-fw-bold" href="#">Glamorous Convention Center</a>
+                <a class="navbar-brand lg-fw-bold" href="#">Glow Convention Center</a>
                 <div class="">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
 
     <main>
         <!-- Carousel Area -->
-        <section>
+        <section class="mt-2 pt-5 pb-5 mb-5">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -73,7 +73,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./images/banner.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block my-5">
+                        <div class="carousel-caption d-none d-md-block my-3">
                             <h1 class="fw-bold">The perfect venue for your
                                 next event</h1>
                             <p> Introducing the largest event space for the first time in Bangladesh.</p>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./images/party-2.jpg" class="d-block w-100 " alt="...">
-                        <div class="carousel-caption d-none d-md-block my-5">
+                        <div class="carousel-caption d-none d-md-block my-3">
                             <h1 class="fw-bold">The perfect venue for your
                                 next event</h1>
                             <p> Introducing the largest event space for the first time in Bangladesh.</p>
@@ -97,7 +97,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./images/party.jpg" class="d-block w-100  " alt="...">
-                        <div class="carousel-caption d-none d-md-block my-5">
+                        <div class="carousel-caption d-none d-md-block my-3">
                             <h1 class="lg-fw-bold sm-fw-normal ">The perfect venue for your
                                 next event</h1>
                             <p> Introducing the largest event space for the first time in Bangladesh.</p>
@@ -125,7 +125,7 @@
 
 
         <div>
-            <h1 class="text-center fw-bold pb-5 pt-5">Happy Clients says</h1>
+            <h1 class="text-center fw-bold pb-5 pt-3">Happy Clients says</h1>
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 ">
@@ -136,7 +136,7 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">Mr. Jon</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a
                                             natural lead-in to additional content. This content is a little bit longer.
                                         </p>
@@ -153,7 +153,7 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">Mr. Mon</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a
                                             natural lead-in to additional content. This content is a little bit longer.
                                         </p>
@@ -173,7 +173,7 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">Mr.Blue</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a
                                             natural lead-in to additional content. This content is a little bit longer.
                                         </p>
@@ -190,7 +190,7 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">Mr.Glue </h5>
                                         <p class="card-text">This is a wider card with supporting text below as a
                                             natural lead-in to additional content. This content is a little bit longer.
                                         </p>
